# HSMaths

./: CMakeLists.txt  README.md  main.cpp
MathsU/: Algebra.cpp  Algebra.h  AlgebraSquareRoot.cpp  AlgebraSquareRoot.h  Fraction.cpp  Fraction.h  Point3D.cpp  Point3D.h  QuadRad.cpp  QuadRad.h  SolidGeo.cpp  SolidGeo.h  Statistics.cpp  Statistics.h  Variance.cpp  Variance.h  Vector3D.h  Vector3D_impl.h
include/clsdautil/: ArrayU.h  VectorU.h
